--- a/lib/mail_view/email.html.erb
+++ b/lib/mail_view/email.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=<%= body_part.charset %>" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <style type="text/css">
   #message_headers {
